--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,83 @@
 .App {
   text-align: center;
+  background-color: black;
+  color: white;
+  width: 99.6%;
+  height: 99.6vh;
+  border: 2px solid red;
+  list-style: none;
+}
+ul {
+  list-style-type: none;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+h1, h2 {
+  margin:0;
+  padding:0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+@media (max-width: 945px) {
+  .App {
+    width: 99.4%;
+    height: 99.6vh;
+    border: 2px solid blue;
+  }
+ }
+
+ @media (max-width: 500px) {
+   .App {
+     width: 99.1%;
+     height: 99.6vh;
+     border: 2px solid orange;
+   }
+  }
+
+  @media (max-height: 625px) {
+    .App {
+      width: 99.1%;
+      height: 99.1vh;
+      border: 2px solid purple;
+    }
+   }
+
+html {
+  background-color: black;
+}
+body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.square {
+  border:2px solid royalblue;
+  width: 60px;
+  height: 50px;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+}
+
+.infogrid {
+  font-size: 8px;
+}
+
+.hidden {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 10px;
+  color: black;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.game-over {
+  font-size: 400px;
+  font-weight: bold;
+  color: red;
+  position: absolute;
+  top: 10px;
+  right: 10%;
 }
